<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            style="@style/AppBarThemeLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="@dimen/elevation_app_bar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                style="@style/ToolbarPopUpTheme"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_gravity="start|bottom"
                android:background="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/content_description_app_logo"
                    android:padding="@dimen/margin_small"
                    android:src="@drawable/logo" />
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>


        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_normal"
                android:scrollbarStyle="outsideOverlay"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
        </android.support.v4.widget.SwipeRefreshLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/tv_error"
            style="@style/ErrorTextView"
            android:layout_gravity="center"
            tools:text="@string/error_msg_generic" />


        <!--
            Width and height are set to match_parent so
            setClosedOnTouchOutside(boolean) works -
            FloatingActionMenu needs to detect the touch.
        -->
        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/fab_base"
            style="@style/FloatingActionButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom|end"
            android:contentDescription="@string/content_description_fab_sort_by"
            android:padding="@dimen/margin_normal"
            app:menu_backgroundColor="@color/blackTransparent_80_percent"
            app:menu_colorNormal="@color/colorAccent"
            app:menu_fab_label="@string/label_fam_sort_by"
            app:menu_icon="@drawable/ic_sort_white_24dp">

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab_sort_offline"
                style="@style/FloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_label="@string/label_fam_offline"
                app:fab_size="mini" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab_sort_articles"
                style="@style/FloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_label="@string/label_fam_articles"
                app:fab_size="mini" />

        </com.github.clans.fab.FloatingActionMenu>

    </android.support.design.widget.CoordinatorLayout>

</layout>